# wishes_map_bot

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  test.py  texts.py  wish_days.json
core/db/: config.py  database.py  models.py  scripts.py
core/keyboards/: main_kb.py  wish_kb.py
core/routers/: main_router.py  payment.py  register.py  wish_days.py
core/states/: registration.py
core/validators/: email.py  phone.py
